<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_balance_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/balance_unit"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_balance_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/balance_amount"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_balance_unit"
        app:layout_constraintTop_toBottomOf="@+id/text_balance_unit" />

    <TextView
        android:id="@+id/balance_unit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/bijli_icon"
        app:layout_constraintBottom_toBottomOf="@+id/text_balance_unit"
        app:layout_constraintEnd_toEndOf="@+id/Next"
        app:layout_constraintTop_toTopOf="@+id/text_balance_unit" />

    <TextView
        android:id="@+id/balance_amount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/rs"
        app:layout_constraintBottom_toBottomOf="@+id/text_balance_amount"
        app:layout_constraintEnd_toEndOf="@+id/balance_unit"
        app:layout_constraintTop_toTopOf="@+id/text_balance_amount" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:padding="3dp"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/menu" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/menu"
        android:layout_width="30dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon"
        app:civ_border_width="2dp"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/enter_total_unit"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <EditText
        android:id="@+id/TotalUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_change_background"
        android:drawableStart="@drawable/bijli_icon"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/_300_eg"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textColorHint="#757474"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/enter_total_bill_amount"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/TotalUnit" />

    <EditText
        android:id="@+id/totalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_change_background"
        android:drawableStart="@drawable/rs"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/_3000_eg"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textColorHint="#757474"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/TotalUnit"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:text="@string/enter_total_number_of_person"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/totalPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_change_background"
        android:drawableStart="@drawable/person"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/_10_eg"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textColorHint="#757474"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/login_button_bg"
        android:elevation="20dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalAmount"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmount" />


    <View
        android:id="@+id/views"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_balance_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/person_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/views">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/AdUnitId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>