<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:elevation="25dp">

    <TextView
        android:id="@+id/enter_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_change_background"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/enter_person_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_dialog_text"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_old_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/old_reading"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/bijli_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edit_person_name"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Text_new_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/new_reading"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/bijli_icon"
        app:layout_constraintStart_toStartOf="@+id/text_old_reading"
        app:layout_constraintTop_toBottomOf="@+id/text_old_reading"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/Enter_old_reading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_change_background"
        android:hint="@string/enter_here"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_old_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_old_reading"
        app:layout_constraintTop_toTopOf="@+id/text_old_reading"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/Enter_new_reading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_change_background"
        android:hint="@string/enter_here"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Text_new_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Text_new_reading"
        app:layout_constraintTop_toTopOf="@+id/Text_new_reading"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/enter_person_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Enter_new_reading"
        app:layout_constraintStart_toStartOf="@+id/Text_new_reading"
        app:layout_constraintTop_toBottomOf="@+id/Enter_new_reading" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Text_new_reading"
        app:layout_constraintTop_toBottomOf="@+id/enter_person_data" />
</androidx.constraintlayout.widget.ConstraintLayout>