<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:elevation="25dp">

    <Button
        android:id="@+id/shareBill"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/whatsapp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/person_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/person_name"
        app:layout_marginBaseline="5dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_old_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/old_reading"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Text_new_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/new_reading"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_old_reading"
        app:layout_constraintTop_toBottomOf="@+id/text_old_reading"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Text_total_consume_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:importantForAutofill="no"
        android:padding="5dp"
        android:text="@string/total_consume_unit"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/Text_new_reading"
        app:layout_constraintTop_toBottomOf="@+id/Text_new_reading" />

    <TextView
        android:id="@+id/Text_unit_per_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:importantForAutofill="no"
        android:padding="5dp"
        android:text="@string/per_unit_cost"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/Text_total_consume_unit"
        app:layout_constraintTop_toBottomOf="@+id/Text_total_consume_unit" />


    <TextView
        android:id="@+id/Text_Gross_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:elevation="15dp"
        android:importantForAutofill="no"
        android:padding="5dp"
        android:text="@string/total_amount"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/Text_unit_per_cost"
        app:layout_constraintTop_toBottomOf="@+id/Text_unit_per_cost" />

    <TextView
        android:id="@+id/old_reading"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/bijli_icon"
        app:layout_constraintBottom_toBottomOf="@+id/text_old_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_old_reading" />

    <TextView
        android:id="@+id/new_reading"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/bijli_icon"
        app:layout_constraintBottom_toBottomOf="@+id/Text_new_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Text_new_reading" />


    <TextView
        android:id="@+id/total_consume_unit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/bijli_icon"
        app:layout_constraintBottom_toBottomOf="@+id/Text_total_consume_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Text_total_consume_unit" />

    <TextView
        android:id="@+id/unit_per_cost"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/rs"
        app:layout_constraintBottom_toBottomOf="@+id/Text_unit_per_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Text_unit_per_cost" />

    <TextView
        android:id="@+id/Gross_amount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="3dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/rs"
        app:layout_constraintBottom_toBottomOf="@+id/Text_Gross_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Text_Gross_amount" />


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Text_new_reading"
        app:layout_constraintTop_toBottomOf="@+id/Text_Gross_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>